2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: The grp structure returned by gr_locate is a
	const. Duplicate this structure before working on it.
	* src/groupmems.c: Do not fail and do not display warnings if a
	close failure happens with the --list option. (Files are opened
	read-only).
	* src/groupmems.c: Avoid mixed declarations and code.

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Replace the 'valid' variable by is_valid to avoid
	clashes with the valid() function.

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/obscure.c: Add brackets and parenthesis.
	* libmisc/obscure.c: Avoid implicit conversion of pointers / chars to
	booleans.
	* libmisc/obscure.c: Simplify the list of if.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Fix a typo in the Usage string.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpconv.c, src/groups.c: Name the parameters in the
	prototypes of the static functions.
	* src/grpconv.c, src/grpunconv.c, src/logoutd.c: Fail if
	unexpected parameters are provided.
	* src/grpconv.c, src/grpunconv.c: Indicate that argc is not used
	in the no SHADOWGRP version.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c, src/chpasswd.c: Removed variable ok, which is
	no more used.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Fix the format for long integers (from %ul to %lu).

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: Mark the line and host arguments of setutmp() as
	not used in the __linux__ version.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/nscd.c: Avoid redefinition of _GNU_SOURCE.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Indentation fix.